WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51516
Webkit2: WebProcess crashes when Private browsing is turned on on yahoo.com
https://bugs.webkit.org/show_bug.cgi?id=51516
Summary
Webkit2: WebProcess crashes when Private browsing is turned on on yahoo.com
Anders Carlsson
Reported
2010-12-22 18:56:12 PST
Webkit2: WebProcess crashes when Private browsing is turned on on yahoo.com
Attachments
Patch
(1.25 KB, patch)
2010-12-22 18:57 PST
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-12-22 18:56:35 PST
<
rdar://problem/8766995
>
Anders Carlsson
Comment 2
2010-12-22 18:57:14 PST
Created
attachment 77295
[details]
Patch
Anders Carlsson
Comment 3
2010-12-22 19:00:02 PST
Committed
r74531
: <
http://trac.webkit.org/changeset/74531
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug