2010-12-22  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        Webkit2: WebProcess crashes when Private browsing is turned on on yahoo.com
        https://bugs.webkit.org/show_bug.cgi?id=51516
        <rdar://problem/8766995>

        * WebProcess/Plugins/Netscape/NetscapePlugin.cpp:
        (WebKit::NetscapePlugin::NPP_SetValue):
        Add a null check for NPP_SetValue.


Canonical link: https://commits.webkit.org/64870@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74531 268f45cc-cd09-0410-ab3c-d52691b4dbfc